# crane_x7_ros_team5

./: README.en.md  README.md  gazebo.bash
crane_x7_examples/: CMakeLists.txt  README.en.md  README.md  package.xml
crane_x7_examples/launch/: team5.launch
crane_x7_examples/scripts/: artifice.py  check.py  color_detection.cpp  detect_seal.py  grab.py  grab_release.py  greet.py  guts_pose.py  move_def.py  push_check.py  robotdesign3_team5.py  seal.py  wipe.py
crane_x7_gazebo/: package.xml
crane_x7_gazebo/worlds/: table.world
crane_x7_moveit_config/: package.xml
crane_x7_moveit_config/config/: crane_x7.srdf
