<?xml version="1.0"?>
<package>
  <name>crane_x7_examples</name>
  <version>0.0.0</version>
  <description>examples of CRANE-X7 ROS package</description>

  <maintainer email="s19c1040hd@s.chibakoudai.jp">Masato Kubotera</maintainer>
  <author email="s19c1040hd@s.chibakoudai.jp">Masato Kubotera</author>
  <author email="s19C1057fa@s.chibakoudai.jp">Kazuki Shirasu</author>
  <author email="s19C1067up@s.chibakoudai.jp">Naoya Takahashi</author>
  <author email="s19c1113vh@s.chibakoudai.jp">Yuta Mibuchi</author>
  <author email="s19C1123jf@s.chibakoudai.jp">Riku Yokoo</author>

  <license>NON-COMMERCIAL LICENSE AGREEMENT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>crane_x7_moveit_config</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>crane_x7_moveit_config</run_depend>
  <run_depend>moveit_commander</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>joy</run_depend>

  <export>

  </export>
</package>
