<?xml version="1.0"?>
<package format="2">
  <name>crane_x7_gazebo</name>
  <version>0.0.0</version>
  <description>The crane_x7_gazebo package</description>

  <maintainer email="s19c1040hd@s.chibakoudai.jp">Masato Kubotera</maintainer>
  <author email="s19c1040hd@s.chibakoudai.jp">Masato Kubotera</author>
  <author email="s19C1057fa@s.chibakoudai.jp">Kazuki Shirasu</author>
  <author email="s19C1067up@s.chibakoudai.jp">Naoya Takahashi</author>
  <author email="s19c1113vh@s.chibakoudai.jp">Yuta Mibuchi</author>
  <author email="s19C1123jf@s.chibakoudai.jp">Riku Yokoo</author>

  <license>NON-COMMERCIAL LICENSE AGREEMENT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo</build_depend>
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <build_export_depend>gazebo</build_export_depend>
  <build_export_depend>gazebo_plugins</build_export_depend>
  <build_export_depend>gazebo_ros_control</build_export_depend>
  <exec_depend>gazebo</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>roboticsgroup_gazebo_plugins</exec_depend>
  <exec_depend>roslang</exec_depend>
  <exec_depend>urdf_parser_plugin</exec_depend>

  <exec_depend>crane_x7_moveit_config</exec_depend>
  <exec_depend>crane_x7_control</exec_depend>
  <exec_depend>crane_x7_description</exec_depend>

</package>
